--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   ],
   "dependencies": {
     "purescript-prelude": "^3.0.0",
-    "purescript-console": "^3.0.0"
+    "purescript-console": "^3.0.0",
+    "purescript-pux": "^10.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
