--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "purescript-prelude": "^3.0.0",
     "purescript-console": "^3.0.0",
-    "purescript-pux": "^10.0.0"
+    "purescript-pux": "^10.0.0",
+    "purescript-arrays": "^4.1.2"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
